<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#01A9F2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Np_back"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:background="@null"
            android:text="@string/back"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="50dp"
            android:gravity="center"
            android:text="@string/reg_newid"
            android:textColor="#fff"
            android:textSize="20sp" />

    </LinearLayout>


    <EditText
        android:id="@+id/Ed_tel"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:hint="@string/tel"
        android:inputType="number"
        android:padding="10dp"
        android:textColorHint="#c0c0c0" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

    <EditText
        android:id="@+id/Ed_yzm"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="#fff"
        android:hint="请输入验证码"
        android:padding="10dp"
        android:inputType="number"
        android:textColorHint="#c0c0c0" />
        <com.futeng.happypays.tools.TimerButton
            android:id="@+id/text_yzm"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/yuanjiao"
            android:hint="获取验证码"
            android:gravity="center"
            android:padding="10dp"
            android:textColorHint="#fff" />

    </LinearLayout>

    <EditText
        android:id="@+id/Ed_load_pw"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#fff"

        android:hint="@string/set_pw"
        android:padding="10dp"
        android:textColorHint="#c0c0c0" />

    <EditText
        android:id="@+id/Ed_load_pws"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:hint="@string/set_againpw"
        android:padding="10dp"
        android:textColorHint="#c0c0c0" />

    <LinearLayout
        android:layout_width="290dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/Cbox"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:padding="10dp" />

        <TextView
            android:layout_width="55dp"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/agree"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/xieyi"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/xieyi"
            android:textColor="@color/home" />

    </LinearLayout>

    <Button
        android:id="@+id/Np_btn_ok"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/yuanjiao"
        android:text="@string/commit"
        android:textColor="#fff"
        android:textSize="22sp" />


</LinearLayout>