<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/logintitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"/>

    <LinearLayout
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="用户名:"/>
        <EditText
            android:id="@+id/login_editTextone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="18sp"
            android:gravity="bottom"
            android:paddingLeft="10dp"
            android:hint="请输入用户名"
            android:background="#fff"/>

    </LinearLayout>

    <TextView
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginLeft="110dp"
    android:layout_marginRight="40dp"
    android:layout_marginTop="5dp"
    android:background="#c0c0c0"/>

    <LinearLayout
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"

        android:orientation="horizontal">

        <TextView
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:textColor="#000"
            android:textSize="18sp"
            android:text="密码:"/>
        <EditText
            android:id="@+id/login_editTexttwo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#000"
            android:textSize="18sp"
            android:gravity="bottom"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:hint="请输入密码"
            android:background="#fff"/>

    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="110dp"
        android:background="#c0c0c0"/>

    <RelativeLayout
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/rember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_id"
            android:layout_alignBaseline="@+id/rember"
            android:layout_alignBottom="@+id/rember"
            android:layout_toEndOf="@+id/rember"
            android:layout_marginStart="10dp"/>

        <Button
            android:id="@+id/forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:background="#fff"
            android:text="@string/fog_pw"
            android:textColor="#c0c0c0"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <Button
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="35dp"
        android:background="@drawable/yuanjiao"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/login_newpeople"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#fff"
        android:text="@string/reg_id"
        android:textColor="@color/home"
        android:textSize="18sp" />



</LinearLayout>
