<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="#F0EFF5">

    <ImageView
        android:layout_width="@dimen/x150"
        android:layout_height="@dimen/y200"
        android:src="@mipmap/logintitle"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y150"/>


    <LinearLayout
        android:background="@drawable/statementbg"
        android:layout_marginTop="@dimen/y41"
        android:layout_width="@dimen/x637"
        android:layout_height="@dimen/y90"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/x35"
            android:layout_height="@dimen/y33"
            android:src="@mipmap/logjinme"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x27"/>

        <EditText
            android:id="@+id/login_editTextone"
            android:paddingLeft="@dimen/x23"
            android:layout_width="@dimen/x500"
            android:layout_height="wrap_content"
            android:textSize="@dimen/y30"
            android:textColor="#333333"
            android:hint="请输入手机号"
            android:textColorHint="#C6C7CC"
            android:background="@null"
            android:layout_gravity="center_vertical"/>
        <ImageView
            android:id="@+id/clean_tel"
            android:layout_width="@dimen/x24"
            android:layout_height="@dimen/y24"
            android:src="@mipmap/loginx"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x27"/>



    </LinearLayout>

    <LinearLayout
        android:background="@drawable/statementbg"
        android:layout_marginTop="@dimen/y45"
        android:layout_width="@dimen/x637"
        android:layout_height="@dimen/y90"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="@dimen/x35"
            android:layout_height="@dimen/y33"
            android:src="@mipmap/loginsecret"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x27"/>

        <EditText
            android:id="@+id/login_editTexttwo"
            android:paddingLeft="@dimen/x23"
            android:layout_width="@dimen/x500"
            android:layout_height="wrap_content"
            android:textSize="@dimen/y30"
            android:hint="请输入密码"
            android:textColor="#333333"
            android:textColorHint="#C6C7CC"
            android:inputType="textPassword"
            android:background="@null"
            android:layout_gravity="center_vertical"/>
        <ImageView
            android:id="@+id/clean_pwd"
            android:layout_width="@dimen/x24"
            android:layout_height="@dimen/y24"
            android:src="@mipmap/loginx"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/x27"/>



    </LinearLayout>

    <RelativeLayout
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp">

        <CheckBox
            android:id="@+id/rember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rem_id"
            android:textColor="@color/home"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/rember"/>

        <TextView
            android:id="@+id/forget_pw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="120dp"
            android:gravity="center"
            android:text="@string/fog_pw"
            android:textColor="@color/home"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>


    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="@dimen/x593"
        android:layout_height="@dimen/y95"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/y65"
        android:background="@drawable/yuanjiao"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="18sp" />

    <Button
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:id="@+id/login_newpeople"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:background="#F0EFF5"
        android:text="@string/reg_id"
        android:textColor="@color/home"
        android:textSize="18sp" />


</LinearLayout>
